examples/test/testpolicy3313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3313
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key25: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value18
      podSelector:
        matchLabels:
          key4: value31
          key37: value43
          key11: value2
